# transcribe-assistant

./: .env.example  .gitignore  Makefile  README-en.md  README.md  main.py  main_flet.py  pyproject.toml
app/: __init__.py  audio_recorder.py  audio_validator.py  config.py  database.py  network_monitor.py  transcriber.py
app/agents/: transcriber_agent.py
app/ui/: __init__.py  history_window.py  main_window.py  markdown_editor.py  native_dialog.py  prompt_modal.py  sidebar.py  vu_meter.py
app/ui_flet/: __init__.py  history_window.py  main_app.py  markdown_editor.py  prompt_modal.py  sidebar.py  tab_manager.py  tab_transcription.py  vu_meter.py
app/ui_flet/markdown/: __init__.py  preview.py  text_utils.py  toolbar.py
app/utils/: clipboard_manager.py  i18n_manager.py
locales/: en.json  pt.json
scripts/connectivity_tests/: test_genai.py  test_httpx.py  test_httpx2.py  test_httpx_post.py  test_ssl.py
