[project]
name = "transcribe-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "faster-whisper>=1.2.1",
    "google-genai>=1.64.0",
    "markdown>=3.10.2",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "python-i18n>=0.3.9",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
# O regex abaixo protege .agent, docs e .venv
extend-exclude = '''
/(
    \.agent
  | \.venv
  | docs
)/
'''
